--- a/package.json
+++ b/package.json
@@ -1,3 +1,12 @@
+
+// package.json
+{
+  "scripts": {
+    "build": "next build",
+    "export": "next export",
+    "deploy": "next build && next export"
+  }
+}
 {
   "name": "my-v0-project",
   "version": "0.1.0",
