--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 
 // package.json
 {
+ 
   "scripts": {
-    "build": "next build",
-    "export": "next export",
-    "deploy": "next build && next export"
+  "dev": "next dev",
+  "build": "next build",
+  "export": "next export",
+  "deploy": "next build && next export"
+
+
   }
 }
 {
